cargo_check_errors.txt
cargo :     Checking memchr v2.7.6
At line:1 char:1
+ cargo check 2>&1 | Out-File -Encoding utf8 cargo_check_errors.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking memchr v2.7.6: 
   String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    Checking cfg-if v1.0.4
    Checking leb128fmt v0.1.0
    Checking subtle v2.6.1
   Compiling num-conv v0.1.0
    Checking unicode-width v0.2.2
    Checking regex-syntax v0.8.8
    Checking itoa v1.0.16
   Compiling time-core v0.1.6
    Checking typenum v1.19.0
    Checking zerocopy v0.8.31
    Checking serde_core v1.0.228
    Checking powerfmt v0.2.0
    Checking bumpalo v3.19.1
    Checking zmij v0.1.8
    Checking getrandom v0.2.16
    Checking cpufeatures v0.2.17
    Checking wasm-encoder v0.243.0
    Checking base64 v0.22.1
   Compiling time-macros v0.2.24
    Checking deranged v0.5.5
    Checking rand_core v0.6.4
    Checking aho-corasick v1.1.4
    Checking generic-array v0.14.7
    Checking time v0.3.44
    Checking block-buffer v0.10.4
    Checking crypto-common v0.1.7
    Checking wast v243.0.0
    Checking digest v0.10.7
    Checking ppv-lite86 v0.2.21
    Checking hmac v0.12.1
    Checking sha2 v0.10.9
    Checking regex-automata v0.4.13
    Checking serde_json v1.0.147
    Checking serde v1.0.228
    Checking rand_chacha v0.3.1
    Checking rand v0.8.5
    Checking regex v1.12.2
    Checking wat v1.243.0
    Checking omnilang v1.2.2 (D:\GitHub\OmniLang)
warning: unused import: `std::rc::Rc`
 --> src\checker.rs:5:5
  |
5 | use std::rc::Rc;
  |     ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by 
default

warning: unused import: `std::fmt`
 --> src\types.rs:3:5
  |
3 | use std::fmt;
  |     ^^^^^^^^

warning: unused variable: `trait_decl`
  --> src\checker.rs:82:29
   |
82 |                 Item::Trait(trait_decl) => {
   |                             ^^^^^^^^^^ help: if this is 
intentional, prefix it with an underscore: `_trait_decl`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by 
default

warning: unused variable: `impl_decl`
  --> src\checker.rs:85:28
   |
85 |                 Item::Impl(impl_decl) => {
   |                            ^^^^^^^^^ help: if this is intentional, 
prefix it with an underscore: `_impl_decl`

warning: unused variable: `const_decl`
  --> src\checker.rs:88:29
   |
88 |                 Item::Const(const_decl) => {
   |                             ^^^^^^^^^^ help: if this is 
intentional, prefix it with an underscore: `_const_decl`

warning: unused variable: `struct_type`
   --> src\checker.rs:128:13
    |
128 |         let struct_type = Type::Named(struct_decl.name.clone());
    |             ^^^^^^^^^^^ help: if this is intentional, prefix it 
with an underscore: `_struct_type`

warning: unused variable: `expr`
   --> src\checker.rs:190:26
    |
190 |             Stmt::Return(expr) => {
    |                          ^^^^ help: if this is intentional, prefix 
it with an underscore: `_expr`

warning: unused variable: `patterns`
   --> src\checker.rs:397:28
    |
397 |             Pattern::Tuple(patterns) => {
    |                            ^^^^^^^^ help: if this is intentional, 
prefix it with an underscore: `_patterns`

warning: unused variable: `i`
   --> src\checker.rs:504:18
    |
504 |             for (i, (arg_expr, expected_type)) in 
args.iter().zip(param_types.iter()).enumerate() {
    |                  ^ help: if this is intentional, prefix it with an 
underscore: `_i`

warning: unused variable: `name`
  --> src\types.rs:36:25
   |
36 |             Type::Named(name) => {
   |                         ^^^^ help: if this is intentional, prefix 
it with an underscore: `_name`

error[E0382]: borrow of moved value: `left`
   --> src\program_evaluator.rs:263:92
    |
215 |     fn evaluate_binary_op(&self, left: Value, op: &BinaryOp, 
right: Value) -> Result<Value, String> {
    |                                  ---- move occurs because `left` 
has type `program_evaluator::Value`, which does not implement the `Copy` 
trait
216 |         match (left, right) {
    |                ---- value moved here
...
263 |             _ => Err(format!("Type mismatch or unsupported op {:?} 
for {:?} and {:?}", op, left, right)),
    |                                                                    
                        ^^^^ value borrowed here after move
    |
    = note: this error originates in the macro 
`$crate::__export::format_args` which comes from the expansion of the 
macro `format` (in Nightly builds, run with -Z macro-backtrace for more 
info)
help: consider cloning the value if the performance cost is acceptable
    |
216 |         match (left.clone(), right) {
    |                    ++++++++

error[E0382]: borrow of moved value: `right`
   --> src\program_evaluator.rs:263:98
    |
215 |     fn evaluate_binary_op(&self, left: Value, op: &BinaryOp, 
right: Value) -> Result<Value, String> {
    |                                                              ----- 
move occurs because `right` has type `program_evaluator::Value`, which 
does not implement the `Copy` trait
216 |         match (left, right) {
    |                      ----- value moved here
...
263 |             _ => Err(format!("Type mismatch or unsupported op {:?} 
for {:?} and {:?}", op, left, right)),
    |                                                                    
                              ^^^^^ value borrowed here after move
    |
    = note: this error originates in the macro 
`$crate::__export::format_args` which comes from the expansion of the 
macro `format` (in Nightly builds, run with -Z macro-backtrace for more 
info)
help: consider cloning the value if the performance cost is acceptable
    |
216 |         match (left, right.clone()) {
    |                           ++++++++

For more information about this error, try `rustc --explain E0382`.
warning: `omnilang` (lib) generated 10 warnings
error: could not compile `omnilang` (lib) due to 2 previous errors; 10 
warnings emitted
